src/App.css
/* ... */
a {
  color: var(--link-fg);

}

a:hover, a:focus {
  color: var(--link-hover-fg);
}

h1,
h2,
h3,
h4,
.item-title,
.date-heading {
  font-family: Candara, Optima, Segoe, "Segoe UI", sans-serif;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/*
 * 2. Application header.
 */

header {
  text-align: center;
  justify-content: center;
}

header h1 {
  margin: 1rem 0;
  color: var(--header-fg);
}

header img {
  border-radius: 1rem;
}


/*
 * 3. Navigation.
 */

.navigation ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding-inline-start: 0;
  list-style-type: none;
}

@media (max-width: 768px) {
  .navigation ul {
    justify-content: center;
  }
}

.navigation li {
  margin: 0.25em 0.25em;
}

/* CSS for button 81 from https://getcssscan.com/css-buttons-examples */
.navigation li a {
  background-color: var(--navigation-button-bg);
  color: var(--navigation-button-fg);
  border: 0 solid var(--navigation-button-border);
  border-radius: 2rem;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: "Basier circle", -apple-system, system-ui, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 1rem;
  font-weight: 600;
  line-height: 1;
  padding: 1rem 1.5rem;
  text-align: center;
  text-decoration: none;
  text-decoration-thickness: auto;
  transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
  box-shadow: 0px 1px 2px var(--shadow-gray);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  /* don't line-break individual links */
  white-space: nowrap;
}

.navigation li a.active {
  background-color: var(--navigation-button-current-bg);
  color: var(--navigation-button-current-fg);
}

.navigation li a:hover,
.navigation li a.active:hover {
  background-color: var(--navigation-button-hover-bg);
  color: var(--navigation-button-hover-fg);
}

.help-text {
  width: 100%;
  padding: .75rem;
  border-radius: .75rem;
  background-color: var(--help-text-bg);
  color: var(--help-text-fg);
}

.help-text button {
  float: right;
}

@media (max-width: 768px) {
  .date-heading {
    margin-bottom: 0 !important;
    overflow: hidden;
    white-space: nowrap;
    height: 2rem;
  }
  .timeslot {
    flex-direction: column;
    margin: 0 !important;
  }
  .timeslot-time {
    position: sticky;
    top: 3rem;
    margin-bottom: 0.5rem;
    padding-left: 0.25rem;
    padding-right: 0.25rem;
    background:var(--program-time-bg);
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0.5rem;
    z-index: 1;
  }

  .time-convention, .time-local {
    display: inline;
    vertical-align: middle;
    margin-right: 0.5rem;
  }

}

/* page not founds */
.error {
  text-align: center;
  color: var(--error-message-fg);
  font-size: larger;
  margin: 3rem;
}
.error span {
  font-weight: bold;
}

/* 3a. Toggles and Filters.
   style all non-selection checkboxes as toggles
   based on https://www.sitepoint.com/css3-toggle-switch/ */

div.switch-wrapper {
  font-size: smaller;
}
div.switch-wrapper label {
  max-height: 2em;
}

div.switch-wrapper,
div.switch-wrapper ~ div {
  clear: both;
  margin: 0.5em 1em;
}

div.program-empty {
  clear: both;
}

input.switch:empty {
  display: none;
}

input.switch:empty ~ label {
  position: relative;
  float: left;
  line-height: 1.6em;
  text-indent: 3.4em;
  margin: 0.2em 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

input.switch:empty ~ label:before,
input.switch:empty ~ label:after {
  position: absolute;
  display: block;
  top: 0;
  bottom: 0;
  left: 0;
  content: " ";
  width: 3em;
  background-color: var(--checkbox-unselected-bg);
  border-radius: 1em;
  box-shadow: inset 0 0.2em 0 var(--shadow-03);
  -webkit-transition: all 100ms ease-in;
  transition: all 100ms ease-in;
}

input.switch:empty ~ label:after {
  width: 1.4em;
  top: 0.1em;
  bottom: 0.1em;
  margin-left: 0.1em;
  background-color: var(--checkbox-switch-bg);
  border-radius: 0.9em;
  box-shadow: inset 0 -0.2em 0 var(--shadow-02);
}

input.switch:checked ~ label:before {
  background-color: var(--checkbox-selected-bg);
}

input.switch:checked ~ label:after {
  margin-left: 1.5em;
}

/* two rews on large screens, seven on tiny */
.search-filters,
.result-filters {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-inline-start: 0;
  margin: 0.25em;
  margin-bottom: 1rem;
}

.stack {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding-inline-start: 0;
}

.filter {
  position: relative;
  z-index: 3;
}

.filter-tags,
.filter-locations,
.filter-search,
.people-search,
.filter-options,
.filter-hide-before
{
  flex-basis: 0;
  flex-grow: 1;
  margin: 0.25em;
}

.filter-tags,
.filter-locations,
.filter-search,
.people-search,
.filter-hide-before
 {
  font-size: 0.8em;
  min-width: 21ch;
  max-width: 50ch;
}

.filter-hide-before {
  margin: 0.25em;
  display: flex;
}

.filter-hide-before label {
  display: none;
}

.filter-hide-before select
{
  width: 100%;
  height: 100%;
  font-size: 1rem;
  padding: 0.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: var(--filter-select-single-caret);
  background-repeat: no-repeat;
  background-position: right 8px center;
}

.filter-hide-before select:hover,
.filter-hide-before select:focus,
.filter-hide-before select:active
{
  background-image: var(--filter-select-single-hover-caret);
}

.filter-search label {
  display: none;
}

.filter-container .filter-select__control,
.filter-hide-before select
{
  background-color: var(--filter-bg);
  color: var(--filter-fg);
  border: 1px var(--filter-border) solid;
  border-radius: 4px;
}
/* ... */

